fix layout shift issues

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Aladin&family=Cabin&family=Source+Code+Pro:wght@600&display=swap");
-
 // Shortcut to apply flex
 @mixin flex($direction, $justify) {
   display: flex;
@@ -36,13 +34,24 @@ header {
   @include flex(row, space-around);
 
   // "Profile picture" on the left hand size of the header
-  img {
+  > .picture {
     width: 30%;
 
     // Show the image in a circular frame
     border-radius: 50%;
     border-style: solid;
     border-width: 3px;
+
+    overflow: hidden;
+
+    > div {
+      height: 0;
+      padding-bottom: 100%;
+
+      > img {
+        width: 100%;
+      }
+    }
   }
 
   // Greeting message "Hey, ..."
